# text-baselines

./: LICENSE  README.md  pyproject.toml  requirements.txt
text_baselines/: text.py
text_baselines/transforms/: __init__.py
text_baselines/transforms/text/: __init__.py  functional.py  skl.py
