[tool.poetry]
name = "text_baselines"
version = "0.1.0"
description = "Utilities for text processing using sklearn. Useful for baselining small datasets."
authors = ["Giorgos Paraskevopoulos"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.5"
numpy = "^1.20.1"
scipy = "^1.6.1"
scikit-learn = "^0.24.1"
spacy = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
